# dotpptx

./: Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dotpptx/: __init__.py  __main__.py  dotpptx.py
tests/: helpers.py  test_unpptx.py
tests/e2e/: test_cli.py
tests/fixtures/: slides-1.pptx
tests/fixtures/slides-1_pptx/docProps/: app.xml  core.xml
tests/fixtures/slides-1_pptx/ppt/: presentation.xml  viewProps.xml
tests/fixtures/slides-1_pptx/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
tests/fixtures/slides-1_pptx/ppt/slideMasters/: slideMaster1.xml
tests/fixtures/slides-1_pptx/ppt/slides/: slide1.xml
tests/unit/: test_dotpptx.py
