[project]
name = "dotpptx"
version = "0.1.0"
description = "dotpptx is a tool to convert PowerPoint files to XML and back."
authors = [{ name = "Antonio Feregrino", email = "antonio.feregrino@gmail.com" }]
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "click>=8.2.1",
]

[project.scripts]
dotpptx = "dotpptx.__main__:cli"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
