[project]
name = "dotpptx"
version = "0.1.0"
description = "dotpptx is a tool to convert PowerPoint files to XML and back."
authors = [{ name = "Antonio Feregrino", email = "antonio.feregrino@gmail.com" }]
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "click>=8.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.10.0",
]

[project.scripts]
dotpptx = "dotpptx.__main__:cli"

[tool.mypy]
python_version = "3.10"
packages = ["dotpptx"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
